# Inner

./: .gitignore  README.md  tmp_read.js
.github/workflows/: release.yml
app/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/public/audio/: README.md  manifest.json
app/server/: index.ts
app/src/: App.vue
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: README.md  icon.icns
app/src-tauri/src/: commands.rs  lib.rs  main.rs  watcher.rs
app/src/components/: BrandMark.vue  Editor.vue  FileSidebar.vue  FontSelector.vue  MindMapPanel.vue  ShaderCanvas.vue  ThemeToggle.vue  TocPanel.vue  TopBar.vue  VibeMixer.vue  ZenTimer.vue
app/src/composables/: audioProfiles.ts  useAudio.ts  useFileSystem.ts  useMindMap.ts  useShader.ts  useTheme.ts  useToc.ts
app/src/extensions/: markdownDecorations.ts  mathDecorations.ts
app/src/fold/: headingFold.ts
app/src/shaders/: cosmos.frag  digital-brain.frag  drive-home.frag  ocean.frag  rain-day.frag  rain.frag  sky.frag  snow.frag  sunny.frag  thunderstorm.frag
app/src/styles/: main.css
app/src/theme/: mdHighlight.ts  nordTheme.ts
app/src/types/: filesystem-access.d.ts
data/: welcome.md
reference shadertoy/: Cloudy Sunrise on Alps Lake  Magic forest
