[package]
name = "inner"
version = "0.2.0"
description = "Inner — 一个让你安静下来写字的地方"
authors = []
edition = "2021"

[lib]
name = "inner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "inner"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
notify-debouncer-mini = "0.4"
walkdir = "2"
chrono = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
